--- a/MovieShopMVC/Views/Home/Index.cshtml
+++ b/MovieShopMVC/Views/Home/Index.cshtml
@@ -1,8 +1,34 @@
-﻿@{
+﻿<!--Pages with similar views using Partial views(usually found inside shared views)-->
+@*
+    Home Page
+    Purchased movies
+    favorite movies
+    movies by genre
+*@
+
+@*<div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>*@
+
+@model List<ApplicationCore.Models.MovieCardResponseModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="rounded">
+    <div class="container-fluid bg-light">
+        <div class="row">
+            @foreach (var movie in Model)
+            {
+                <div class="col-3">
+                    <partial name="_MovieCard" model="movie" />
+                    @*@await Html.PartialAsync("_MovieCard", movie)... This line is same as above*@
+                </div>
+            }
+
+        </div>
+    </div>
 </div>
