--- a/MovieShopSPA/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieShopSPA/src/app/movies/movie-details/movie-details.component.html
@@ -1,1 +1,108 @@
-<<p>movie-details works!</p>>
+<div class="detail-page">
+    <div class="row px-3 py-1" style="
+        background-image:
+        linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url( @Model.BackdropUrl);
+        background-size: cover;
+    ">
+        <div class="col-4">
+            <div class="row">
+                <div class="col-6 offset-6">
+                    <img src="{{movie.posterUrl}}" class="w-100" alt="{{movie.title}}" />
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col offset-1">
+            <h1 class="text-white mt-3">{{movie.title}}</h1>
+            <div class="row">
+                <div class="col-7">
+                    <p class="text-secondary">{{movie.tagline}}</p>
+                    <div class="row">
+                        <p class="text-secondary font-weight-bold col-3">
+                            {{movie.runTime}} m | {{movie?.releaseDate | date:'yyyy'}}
+                        </p>
+                        <p class="col offset-1">
+                            @foreach (var genre in Model.Genres)
+                            {
+                <a class="badge badge-secondary">
+                    {{genre.Name}}
+                </a>}
+                        </p>
+                    </div>
+                    <h4 class="mb-3"><span class="badge badge-warning">@Model.Rating </span></h4>
+                    <p class="text-white">@Model.Overview</p>
+                </div>
+                <div class="col offset-1 text-right">
+                    <a class="btn btn-outline-light w-75" href="#" role="button"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> REVIEW</a>
+                    <a class="btn btn-outline-light w-75 my-4" href="#" role="button">
+                        <i class="fa fa-play" aria-hidden="true"></i>
+                        TRAILER
+                    </a>
+                    @if (!@purchaseRepository.FindPurchaseByUserMovie(currentUser.UserId, Model.Id))
+                    {
+        <form asp-controller="Users" asp-action="BuyMovie" asp-route-id="@Model.Id" method="post">
+            <button class="btn btn-light w-75 my-2" type="submit" onclick="return confirm('Do you want to buy this movie?')" role="button">BUY @Model.Price</button>
+        </form>}
+
+                    <a class="btn btn-light w-75" href="#" role="button">WATCH MOVIE</a>
+                </div>
+            </div>
+        </div> -->
+    </div>
+    <!-- <div class="row pt-4">
+        <div class="col-4 bg-light">
+            <h5>MOVIE FACTS</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-transparent pt-4">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    Rlease Date <span class="badge badge-pill badge-dark">@Convert.ToDateTime(Model.ReleaseDate).ToString("MM/dd/yyyy")</span>
+                </li>
+                <li class="list-group-item bg-transparent">
+                    <i class="fa fa-hourglass-half" aria-hidden="true"></i>
+                    Run Time <span class="badge badge-pill badge-dark">@Model.RunTime m</span>
+                </li>
+                <li class="list-group-item bg-transparent">
+                    <i class="fa fa-money" aria-hidden="true"></i>
+                    Box Office <span class="badge badge-pill badge-dark"> @String.Format("{0:C0}", Model.Revenue) </span>
+                </li>
+                <li class="list-group-item bg-transparent">
+                    <i class="fa fa-usd" aria-hidden="true"></i>
+                    Budget <span class="badge badge-pill badge-dark">
+                        @String.Format("{0:C0}", Model.Budget)
+                    </span>
+                </li>
+                <li class="list-group-item bg-transparent">
+                    <a href="@Model.ImdbUrl" class="text-dark">
+                        <i class="fa fa-imdb" aria-hidden="true"></i>
+                    </a>
+                    <a href="@Model.TmdbUrl" class="text-dark mx-3">
+                        <i class="fa fa-share-square-o" aria-hidden="true"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-4 offset-1">
+            <h5>CAST</h5>
+            <ul class="list-group list-group-flush">
+                @foreach (var cast in Model.Casts)
+                {
+    <li class="list-group-item">
+        <a class="text-dark" asp-controller="casts" asp-action="details" asp-route-id="@cast.Id">
+
+            <div class="row">
+                <div class="col-2">
+                    <img class="w-50 rounded-circle" src="@cast.ProfilePath" alt="@cast.Name" />
+                </div>
+                <div class="col-4">
+                    @cast.Name
+                </div>
+                <div class="col">
+                    @cast.Character
+                </div>
+            </div>
+
+        </a>
+    </li>}
+            </ul>
+        </div>
+    </div> -->
+</div>
