--- a/MovieShopSPA/src/app/shared/components/movie-card/movie-card.component.html
+++ b/MovieShopSPA/src/app/shared/components/movie-card/movie-card.component.html
@@ -1,5 +1,5 @@
 <div class="card mb-4 shadow bg-light">
-    <a [routerLink] = "['/movie/details', moviecard.id]">
+    <a [routerLink] = "['/movies/details', moviecard.id]">
         <img src="{{moviecard.posterUrl}}" class="img-fluid" alt="{{moviecard.title}}" />
     </a>
 </div>
