--- a/MovieShopSPA/src/app/home/home.component.html
+++ b/MovieShopSPA/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="rounded">
     <div class="container-fluid bg-light">
         <div class="row">
+            <!--The NgFor works like foreach in c#-->
         <div class="col-6" *ngFor="let movie of movies">
             <app-movie-card [moviecard] = 'movie'>
             </app-movie-card>
